@@ -9,13 +9,13 @@
 package org.elasticsearch.search.fetch;
 
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
-import org.elasticsearch.index.fieldvisitor.CustomFieldsVisitor;
+import org.elasticsearch.index.fieldvisitor.StoredFieldLoader;
 import org.elasticsearch.search.profile.ProfileResult;
 import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 import static org.elasticsearch.test.MapMatcher.assertMap;
 import static org.elasticsearch.test.MapMatcher.matchesMap;
@@ -32,7 +32,7 @@ public class FetchProfilerTests extends ESTestCase {
 
     public void testStoredFieldsIsOrdered() throws IOException {
         FetchProfiler profiler = new FetchProfiler();
-        profiler.visitor(new CustomFieldsVisitor(Set.of(), true));
+        profiler.storedFields(StoredFieldLoader.create(true, Collections.emptySet()));
         ProfileResult result = profiler.finish();
         assertMap(result.getDebugInfo(), matchesMap().entry("stored_fields", List.of("_id", "_routing", "_source")));
         // Make sure that serialization preserves the order
